# rfp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  matcher.rs  parser.rs  pipe.rs  tui.rs
