[package]
name = "rfp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description="A Rust rewrite of [fpp](https://github.com/facebook/PathPicker) that lets you interactively select files from piped input and open them in your editor."
repository = "https://github.com/psyclaudeZ/rfp/"
homepage = "https://github.com/psyclaudeZ/rfp/"
keywords = ["cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
env_logger = "0.11"
is-terminal = "0.4"
log = "0.4"
ratatui = "0.29.0"
regex = "1"

[[bin]]
name = "rfp"
path = "src/main.rs"
